<resources>
    <string name="app_name">Parking</string>
    <string name="signInTitle">Parking App</string>
    <string name="signInUnLabel">Email</string>
    <string name="signInPwdLabel">Password</string>
    <string name="signInBtn">SIGN IN</string>
    <string name="signCreateAcc">Create Account</string>


    <string name="welcomeTitle">Welcome to Parking App</string>
    <string name="createAccNameLbl">Name</string>
    <string name="createAccEmailLbl">Email</string>
    <string name="createAccPwdLbl">Password</string>
    <string name="createAccContactLbl">Contact Number</string>
    <string name="createAccCarLbl">Car Licence Plate Number</string>
    <string name="createAccBtn">Create Account</string>
    <string name="createAccNameHint">Enter your name</string>
    <string name="createAccEmailHint">Enter your email</string>
    <string name="createAccPwdHint">Enter the password</string>
    <string name="createAccContactHint">Enter contact number</string>
    <string name="createAccCarHint">Enter car plate number</string>

    <string name="addParkingTitle">Add Parking Details</string>
    <string name="addParkBuildingNo">Building No</string>
    <string name="addParkHours">Hours</string>
    <string name="addParkCarNo">Licence No</string>
    <string name="addParkSuitNo">Suit No</string>
    <string name="addParkDate">Date &amp; Time</string>
    <string name="addParkLocation">Location</string>
    <string name="addParkCalendarBtn" />
    <string name="addParkCurrentLocationBtn" />
    <string name="addParkAddressLbl">Address</string>
    <string name="addParkBuildingHint">Enter the building no</string>
    <string name="addParkHoursHint">Enter the no of hours</string>
    <string name="addParkSuitHint">Enter the host suit no</string>
    <string name="addParkDateHint">Click to fetch date</string>
    <string name="addParkLocationHint">Fetch current location</string>
    <string name="addParkAddressHint">Enter address</string>
    <string name="addParkOR">OR</string>

    <string name="parkingListTitle">Parking List</string>
    <string name="sameText">SAMPLE TEXT</string>
    <string name="add_parking">Add Parking</string>
    <string name="update_profile">Update Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="parked_vehicle_details">Parked Vehicle Details</string>
    <string name="map_redirect">map redirect</string>
    <string name="delete_record">Delete Record</string>
    <string name="edit_record">Edit Record</string>
    <string name="select_profile_image_from_below">SELECT PROFILE IMAGE FROM BELOW</string>
    <string name="set">SET</string>
</resources>
