<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/AddParking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baymax"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".AddParking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addParkingBuildLbl"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:text="@string/addParkBuildingNo"
                android:textAlignment="viewEnd"
                android:textColor="#181819"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addParkingBuildingField"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:layout_marginStart="10dp"
                android:paddingStart="5sp"
                android:layout_height="match_parent"
                android:background="@drawable/round_edit"
                android:ems="10"
                android:hint="@string/addParkBuildingHint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addParkingHoursLbl"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:text="@string/addParkHours"
                android:textAlignment="viewEnd"
                android:textColor="#181819"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addParkingHoursField"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:layout_marginStart="10dp"
                android:paddingStart="5sp"
                android:layout_height="match_parent"
                android:background="@drawable/round_edit"
                android:ems="10"
                android:hint="@string/addParkHoursHint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addParkingLicenceLbl"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:text="@string/addParkCarNo"
                android:textAlignment="viewEnd"
                android:textColor="#181819"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addParkingLicenceField"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:layout_marginStart="10dp"
                android:paddingStart="5sp"
                android:layout_height="match_parent"
                android:background="@drawable/round_edit"
                android:ems="10"
                android:hint="@string/createAccCarHint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addParkingSuitLbl"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:text="@string/addParkSuitNo"
                android:textAlignment="viewEnd"
                android:textColor="#181819"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addParkingSuitField"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:layout_marginStart="10dp"
                android:paddingStart="5sp"
                android:layout_height="match_parent"
                android:background="@drawable/round_edit"
                android:ems="10"
                android:hint="@string/addParkSuitHint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addParkingDateLbl"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:text="@string/addParkDate"
                android:textAlignment="viewEnd"
                android:textColor="#181819"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addParkingDateField"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_marginStart="10dp"
                android:layout_height="match_parent"
                android:background="@drawable/round_edit"
                android:ems="10"
                android:paddingStart="5sp"
                android:hint="@string/addParkDateHint"
                android:inputType="date" />

            <ImageView
                android:id="@+id/addParkingCalendarBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@android:drawable/ic_menu_my_calendar"
                app:tint="@color/black"
                tools:src="@android:drawable/ic_menu_my_calendar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addParkingCurrentLocationLbl"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:text="@string/addParkLocation"
                android:textAlignment="viewEnd"
                android:textColor="#181819"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addParkingCurrentLocationField"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_marginStart="10dp"
                android:layout_height="match_parent"
                android:background="@drawable/round_edit"
                android:paddingStart="5sp"
                android:ems="10"
                android:hint="@string/addParkLocationHint"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/addParkingFetchCurrentLocBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@android:drawable/ic_menu_mylocation"
                app:tint="@color/black"
                tools:src="@android:drawable/ic_menu_mylocation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addParkingORLbl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/addParkOR"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addParkingAddressLbl"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:text="@string/addParkAddressLbl"
                android:textAlignment="viewEnd"
                android:textColor="#181819"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addParkingAddressField"
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_marginStart="10dp"
                android:layout_height="match_parent"
                android:background="@drawable/round_edit"
                android:paddingStart="5sp"
                android:ems="10"
                android:hint="@string/addParkAddressHint"
                android:inputType="textPersonName" />

            <ImageView
                android:id="@+id/addParkingFetchAddressBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@android:drawable/ic_menu_send"
                android:clickable="true"
                app:tint="@color/black"
                tools:src="@android:drawable/ic_menu_send" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
