<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity">

    <TextView
        android:id="@+id/parkingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#99F4DC0B"
        android:fontFamily="@font/schoolbell"
        android:lineSpacingExtra="8sp"
        android:text="@string/update_profile"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/update_email_carno_label"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/crushed"
        android:text="@string/sameText"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingTitle" />

    <TextView
        android:id="@+id/update_name_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:textAlignment="center"
        android:text="@string/createAccNameLbl"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_email_carno_label" />

    <EditText
        android:id="@+id/update_name_field"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/sameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_email_carno_label" />

    <TextView
        android:id="@+id/update_password_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:textAlignment="center"
        android:text="@string/createAccPwdLbl"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_name_label" />

    <EditText
        android:id="@+id/update_pwd_field"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/sameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_name_field" />

    <TextView
        android:id="@+id/update_contact_label"
        android:layout_width="149dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="34dp"
        android:text="@string/createAccContactLbl"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_password_label" />

    <EditText
        android:id="@+id/update_contact_field"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/sameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_pwd_field" />

    <Button
        android:id="@+id/update_profile_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="55dp"
        android:stateListAnimator="@android:animator/fade_in"
        android:text="@string/update_profile"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_contact_field" />

</androidx.constraintlayout.widget.ConstraintLayout>