<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreateAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baymax"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".CreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="25"
                android:clickable="false"
                android:text="" />

            <ImageView
                android:id="@+id/createAccProfilePictImg"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="50"
                android:clickable="true"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="25"
                android:clickable="false"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/createAccNameImg"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="match_parent"
                android:background="@drawable/name"/>

            <EditText
                android:id="@+id/createAccNameField"
                android:layout_width="0dp"
                android:layout_weight="90"
                android:layout_marginStart="20dp"
                android:layout_height="match_parent"
                android:background="@drawable/round_edit"
                android:paddingLeft="5sp"
                android:hint="@string/createAccNameHint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/createAccEmailImg"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="match_parent"
                android:background="@drawable/email" />

            <EditText
                android:id="@+id/createAccEmailField"
                android:layout_width="0dp"
                android:layout_weight="90"
                android:layout_marginStart="20dp"
                android:background="@drawable/round_edit"
                android:paddingLeft="5sp"
                android:layout_height="match_parent"
                android:hint="@string/createAccEmailHint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/createAccPasswordImg"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="match_parent"
                android:background="@drawable/password"/>

            <EditText
                android:id="@+id/createAccPasswordField"
                android:layout_width="0dp"
                android:layout_weight="90"
                android:layout_marginStart="20dp"
                android:background="@drawable/round_edit"
                android:paddingLeft="5sp"
                android:layout_height="match_parent"
                android:hint="@string/createAccPwdHint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/createAccContactImg"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="match_parent"
                android:background="@drawable/call" />

            <EditText
                android:id="@+id/createAccContactField"
                android:layout_width="0dp"
                android:layout_weight="90"
                android:layout_marginStart="20dp"
                android:background="@drawable/round_edit"
                android:paddingLeft="5sp"
                android:layout_height="match_parent"
                android:hint="@string/createAccContactHint"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/createAccCarImg"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@drawable/car_img"
                android:scaleType="centerCrop" />

            <EditText
                android:id="@+id/createAccLicenceField"
                android:layout_width="0dp"
                android:layout_weight="90"
                android:background="@drawable/round_edit"
                android:paddingLeft="5sp"
                android:layout_height="match_parent"
                android:hint="@string/createAccCarHint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/createAccBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/createAccBtn"
            android:textColor="@color/white" />

    </LinearLayout>


</ScrollView>
